--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "firebase": "^6.3.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
